// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders correctly 1`] = `
<div
  id="emailSent"
>
  <div>
    <div
      className="govuk-width-container"
    >
      <div
        className="govuk-breadcrumbs"
      >
        <ol
          className="govuk-breadcrumbs__list"
        >
          <li
            className="govuk-breadcrumbs__list-item"
          >
            <a
              className="govuk-breadcrumbs__link"
              href="https://nationalcareers.service.gov.uk/"
            >
              Home
            </a>
          </li>
        </ol>
      </div>
      <main
        className="govuk-main-wrapper"
      >
        <div
          className="govuk-grid-row"
        >
          <div
            className="govuk-grid-column-two-thirds"
          >
            <h1
              className="govuk-heading-xl govuk-!-margin-top-6 govuk-!-margin-bottom-9"
            >
              We've sent you an email
            </h1>
          </div>
        </div>
      </main>
    </div>
  </div>
</div>
`;

exports[`when action is ACTIONS.CHANGE_EMAIL renders correctly 1`] = `
<div
  id="emailSent"
>
  <div>
    <div
      className="govuk-width-container"
    >
      <div
        className="govuk-breadcrumbs"
      >
        <ol
          className="govuk-breadcrumbs__list"
        >
          <li
            className="govuk-breadcrumbs__list-item"
          >
            <a
              className="govuk-breadcrumbs__link"
              href="https://nationalcareers.service.gov.uk/"
            >
              Home
            </a>
          </li>
        </ol>
      </div>
      <main
        className="govuk-main-wrapper"
      >
        <div
          className="govuk-grid-row"
        >
          <div
            className="govuk-grid-column-two-thirds"
          >
            <h1
              className="govuk-heading-xl govuk-!-margin-top-6 govuk-!-margin-bottom-9"
            >
              We've sent you an email
            </h1>
            <div>
              <p
                className="govuk-body"
              />
              <p
                className="govuk-body"
              >
                Check your spam folder if you can't see it in a few minutes.
              </p>
              <p
                className="govuk-body"
              >
                If you don't receive an email after this time you can 
                <a
                  className="govuk-link"
                  href={null}
                  onClick={[Function]}
                >
                  resend the activation email
                </a>
                .
              </p>
              <p
                className="govuk-body"
              >
                This link expires in 24 hours.
              </p>
              <a
                className="govuk-button govuk-button--start"
                data-module="govuk-button"
                draggable="false"
                href={null}
                onClick={null}
                role="button"
              >
                Return to sign in
              </a>
            </div>
          </div>
        </div>
      </main>
    </div>
  </div>
</div>
`;

exports[`when action is ACTIONS.RESET_PASSWORD renders correctly 1`] = `
<div
  id="emailSent"
>
  <div>
    <div
      className="govuk-width-container"
    >
      <div
        className="govuk-breadcrumbs"
      >
        <ol
          className="govuk-breadcrumbs__list"
        >
          <li
            className="govuk-breadcrumbs__list-item"
          >
            <a
              className="govuk-breadcrumbs__link"
              href="https://nationalcareers.service.gov.uk/"
            >
              Home
            </a>
          </li>
        </ol>
      </div>
      <main
        className="govuk-main-wrapper"
      >
        <div
          className="govuk-grid-row"
        >
          <div
            className="govuk-grid-column-two-thirds"
          >
            <h1
              className="govuk-heading-xl govuk-!-margin-top-6 govuk-!-margin-bottom-9"
            >
              We've sent you an email
            </h1>
            <div>
              <p
                className="govuk-body"
              />
              <p
                className="govuk-body"
              >
                You will only receive this email if you have an account.
              </p>
              <p
                className="govuk-body"
              >
                Check your spam folder if you can't see it in a few minutes.
              </p>
              <p
                className="govuk-body"
              >
                If you don't receive an email after this time you can 
                <a
                  className="govuk-link"
                  href={null}
                  onClick={null}
                >
                  resend password reset email
                </a>
                .
              </p>
              <p
                className="govuk-body"
              >
                This link expires in 24 hours.
              </p>
            </div>
          </div>
        </div>
      </main>
    </div>
  </div>
</div>
`;

exports[`when action is ACTIONS.SIGNUP renders correctly 1`] = `
<div
  id="emailSent"
>
  <div>
    <div
      className="govuk-width-container"
    >
      <div
        className="govuk-breadcrumbs"
      >
        <ol
          className="govuk-breadcrumbs__list"
        >
          <li
            className="govuk-breadcrumbs__list-item"
          >
            <a
              className="govuk-breadcrumbs__link"
              href="https://nationalcareers.service.gov.uk/"
            >
              Home
            </a>
          </li>
        </ol>
      </div>
      <main
        className="govuk-main-wrapper"
      >
        <div
          className="govuk-grid-row"
        >
          <div
            className="govuk-grid-column-two-thirds"
          >
            <h1
              className="govuk-heading-xl govuk-!-margin-top-6 govuk-!-margin-bottom-9"
            >
              We've sent you an email
            </h1>
            <div>
              <p
                className="govuk-body"
              />
              <p
                className="govuk-body"
              >
                Check your spam folder if you can't see it in a few minutes.
              </p>
              <p
                className="govuk-body"
              >
                This link expires in 24 hours.
              </p>
            </div>
          </div>
        </div>
      </main>
    </div>
  </div>
</div>
`;
